unpackaged/main/default/objects/litify_pm__Question_Answer__c/litify_pm__Question_Answer__c.object-meta.xml
<CustomObject>
    <label>Question Answer</label>
    <nameField>
        <displayFormat>ANS-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Question Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>