unpackaged/main/default/objects/litify_pm__Question_Answer__c/fields/litify_pm__Answer__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Answer__c</fullName>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>