unpackaged/main/default/objects/litify_pm__Question_Answer__c/fields/litify_pm__Answer_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Answer_Encrypted__c</fullName>
    <label>Answer (Encrypted)</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>