unpackaged/main/default/objects/litify_pm__Question_Answer__c/fields/litify_pm__Answer_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Answer_Type__c</fullName>
    <label>Answer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>