unpackaged/main/default/objects/litify_pm__Question_Answer__c/fields/litify_pm__Question_Node__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Question_Node__c</fullName>
    <label>Question_Node</label>
    <length>255</length>
    <type>Text</type>
</CustomField>