unpackaged/main/default/objects/litify_pm__Question_Answer__c/fields/litify_pm__Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the questionnaire from where the answer&#39;s question belongs</description>
    <label>Questionnaire</label>
    <referenceTo>litify_pm__Questionnaire__c</referenceTo>
    <relationshipLabel>Question Answers</relationshipLabel>
    <relationshipName>Question_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>