unpackaged/main/default/objects/litify_pm__Question_Answer__c/listViews/litify_pm__All.listView-meta.xml
<ListView>
    <fullName>litify_pm__All</fullName>
    <columns>NAME</columns>
    <columns>litify_pm__Answer__c</columns>
    <columns>litify_pm__Answer_Type__c</columns>
    <columns>litify_pm__Intake__c</columns>
    <columns>litify_pm__Question__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>